--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
    height: 100dvh;
 }
 
+.section-cont:last-child div section {
+   height: auto;
+}
+
 @media only screen and (max-width: 767px) {
     #home {
        align-items: center;
