--- a/style.css
+++ b/style.css
@@ -19,9 +19,11 @@
 
 @media only screen and (max-width: 767px) {
     #home {
+        display: flex;
        align-items: center;
     }
 }
+
 
 #googlemaps {
     filter: invert(90%) hue-rotate(180deg)
