--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 .section-cont:nth-child(2) div section,
 .section-cont:nth-child(3) div section,
 .section-cont:nth-child(4) div section,
-.section-cont:nth-child(5) div section {
+.section-cont:nth-child(5) div section, 
+.section-cont:nth-child(6) div section {
    height: 100dvh;
 }
 
