--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@
 .section-cont:nth-child(3) div section,
 .section-cont:nth-child(4) div section,
 .section-cont:nth-child(5) div section, 
-.section-cont:nth-child(6) div section {
+.section-cont:nth-child(6) div section,
+.section-cont:nth-child(7) div section
+{
    height: 100dvh;
 }
 
