--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 .section-cont:nth-child(5) div section, 
 .section-cont:nth-child(6) div section,
 .section-cont:nth-child(7) div section,
-.section-cont:nth-child(8) div section
+.section-cont:nth-child(8) div section,
+.section-cont:nth-child(9) div section
 {
    height: 100dvh;
 }
