add min height.

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 .section-cont:nth-child(8) div section,
 .section-cont:nth-child(9) div section
 {
-   height: 100dvh;
+   min-height: 100dvh;
 }
 
 
